syntax = "proto3";

//Definindo onde ser√£o gerados os arquivos pb
option go_package = "./pb";

service Hello {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
   string message = 1;
}